@@ -1,6 +1,8 @@
 RC 4
 ====
 
+- Added Validation group support
+
 - Added more fine-grained fetching strategy
 
 - Support multiple validators simulatenously
